--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <!-- Шапка -->
     <header class="header-test">
         <div class="header-test-bottom">
-            Нижняя часть
+            Нижняя часть шапки
         </div>
     </header>
 
@@ -176,6 +176,12 @@
                         </svg>
 
                         <span>В наличии</span>
+
+                        <div class="in-stock-info-banner">
+                            <svg width="20" height="20" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.12038 5.8485H8.1262M8.12038 11.6667V8.03032M15.3931 8.75759C15.3931 12.7743 12.1371 16.0303 8.12038 16.0303C4.10366 16.0303 0.847656 12.7743 0.847656 8.75759C0.847656 4.74086 4.10366 1.48486 8.12038 1.48486C12.1371 1.48486 15.3931 4.74086 15.3931 8.75759Z" stroke="#6FAB41" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
                     </div>
 
                     <div class="in-stock">
@@ -226,7 +232,7 @@
                     </div>
 
                     <div class="item-price-container-right">
-                        <button class="question-btn">
+                        <button class="question-btn question-btn-absolute">
                             <svg class="question-icon" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16.75 10 L16.75 10.01" stroke="black" stroke-width="1" stroke-linecap="round" />
                                 <path d="M16.75 22V14.5" stroke="black" stroke-width="1" stroke-linecap="round" />
@@ -272,6 +278,26 @@
                                 </button>
                         </div>
                     </div>
+                </div>
+
+                <div class="item-other-buttons">
+                    <button class="add-to-favorites-btn">
+                        <svg class="add-to-favorite-icon" width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.3125 5.5C6.13594 5.5 2.75 8.88594 2.75 13.0625C2.75 20.625 11.6875 27.5 16.5 29.0991C21.3125 27.5 30.25 20.625 30.25 13.0625C30.25 8.88594 26.8641 5.5 22.6875 5.5C20.13 5.5 17.8681 6.76981 16.5 8.71337C15.8025 7.7202 14.8761 6.90965 13.7991 6.35032C12.722 5.79098 11.5261 5.49931 10.3125 5.5Z" stroke="black" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+
+                        <span>Добавить в избранное</span>
+                    </button>
+
+                    <button class="question-btn">
+                        <svg class="question-icon" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.75 10 L16.75 10.01" stroke="black" stroke-width="1" stroke-linecap="round"></path>
+                            <path d="M16.75 22V14.5" stroke="black" stroke-width="1" stroke-linecap="round"></path>
+                            <path d="M31.75 16C31.75 24.2845 25.0345 31 16.75 31C8.4655 31 1.75 24.2845 1.75 16C1.75 7.7155 8.4655 1 16.75 1C25.0345 1 31.75 7.7155 31.75 16Z" stroke="black" stroke-width="1" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+
+                        <span>Задать вопрос о товаре</span>
+                    </button>
                 </div>
 
                 <div class="fixed-product-info">
