Added arrow on select-configuration section

--- a/product.html
+++ b/product.html
@@ -633,6 +633,12 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="arrow-7">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                     </div>
 
                     <div class="product-desc-cards">
@@ -1365,9 +1371,21 @@
 
                                 <div class="related-products-card-price-container">
                                     <div class="related-products-card-price-left-side">
-                                        <p class="related-products-card-price">
-                                            73 900 ₽
-                                        </p>
+                                        <div class="related-products-card-prices">
+                                            <p class="related-products-card-price">
+                                                73 200 ₽
+                                            </p>
+
+                                            <div class="related-products-card-price-discount">
+                                                <p class="related-products-card-old-price">
+                                                    59 900 ₽
+                                                </p>
+
+                                                <p class="related-products-card-discount-banner">
+                                                    − 20%
+                                                </p>
+                                            </div>
+                                        </div>
 
                                         <div class="ya-split">
                                             <svg width="215" height="18" viewBox="0 0 215 18" fill="none" xmlns="http://www.w3.org/2000/svg">
